# LSGAN-AnimeGenerator

./: .gitignore  .pylintrc  README.md  notebook.ipynb  pyproject.toml
anime_gan/: __init__.py  checkpointing.py  config.py  data.py  metrics.py  models.py  training.py  utils.py  visualization.py
